--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
     "manifest_version": 2,
     "name": "Currency Converter",
-    "version": "1.0",
+    "version": "2.0",
     "description": "Convert amount in one currency to another.",
     "browser_action": {
         "default_popup": "popup.html",
-        "default_icon": {
-            "16": "icon.png",
-            "48": "icon.png",
-            "128": "icon.png"
+        "icons": {
+            "16": "icons/icon-16.png",
+            "48": "icons/icon-48.png",
+            "128": "icons/icon-128.png"
         }
     },
     "permissions": [
